--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
+    "express-session": "^1.18.0",
     "file-upload": "^0.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.4",
