--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "file-upload": "^0.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.4",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "stripe": "^14.17.0"
   }
 }
